Style features block

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -41,4 +41,6 @@
 
 @use 'blocks/application-form/application-form';
 
+@use 'blocks/features-list/features-list';
+
 @use 'blocks/footer/page-footer';
