--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -41,13 +41,14 @@ block variables
           {
             title: 'Первая клиника профессионального массажа в&nbsp;России',
             text: `Не&nbsp;салон красоты и&nbsp;не&nbsp;поликлиника, где один массажист работает со&nbsp;всеми
-              по&nbsp;одному шаблону, а&nbsp;клиника со&nbsp;специализацией и&nbsp;врачами. Для нас это не&nbsp;просто
+              по&nbsp;одному шаблону, а&nbsp;клиника со&nbsp;спе&shy;циализацией и&nbsp;врачами. Для нас это не&nbsp;просто
               бизнес, мы верим в&nbsp;своё дело`
           },
           {
             title: 'Работаем так, чтобы нас хотелось советовать близким',
             text: `Нам важно, чтобы вы были довольны, и&nbsp;у&nbsp;нас неплохо получается: почти 70% клиентов приходят
-              по&nbsp;совету друзей. Многие ходят к&nbsp;нам семьями. Почитайте отзывы, чтобы узнать о&nbsp;нас побольше`
+              по&nbsp;совету друзей. Многие ходят к&nbsp;нам семьями. Почитайте
+              <a class="link link_secondary underline" href="/reviews.html">отзывы</a>, чтобы узнать о&nbsp;нас побольше`
           },
           {
             title: 'Гарантируем безопасность, результат и&nbsp;честность. Для нас важно помочь',
