--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -33,7 +33,7 @@ block variables
         heading: 'Что вы получите от&nbsp;скульптурно-буккального массажа',
         features: [
           {
-            title: 'Вы будете выглядеть моложе, пропадут морщины, подтянется овал лица',
+            title: 'Вы будете выглядеть моложе, пропадут морщины, подтянется овал&nbsp;лица',
             text: `Исчезнет второй подбородок, кожа станет упругой и&nbsp;свежей, время как будто пойдёт для&nbsp;вас
               вспять. Все возрастные изменения пропадут или&nbsp;сильно уменьшатся`
           },
