--- a/src/assets/scss/blocks/reusable/heading.scss
+++ b/src/assets/scss/blocks/reusable/heading.scss
@@ -1,8 +1,9 @@
 @use '../../tools' as *;
 
 .heading {
-  font-family: $title-font-family;
   font-weight: 700;
+  font-size: 2.4rem;
+  font-family: $title-font-family;
   text-align: center;
 
   &_primary {
@@ -15,5 +16,23 @@
     @include themify() {
       color: $color-secondary;
     }
+  }
+}
+
+@media (min-width: $tablet-min-width) {
+  .heading {
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: $s-desktop-min-width) {
+  .heading {
+    font-size: 3.2rem;
+  }
+}
+
+@media (min-width: $desktop-min-width) {
+  .heading {
+    font-size: 3.6rem;
   }
 }
