--- a/src/assets/scss/blocks/features-list/features-list.scss
+++ b/src/assets/scss/blocks/features-list/features-list.scss
@@ -25,11 +25,27 @@
 
     margin-bottom: 6rem;
 
+    @mixin feature-list-icon($icon-index) {
+      .features-list__image {
+        background-image: #{url(list.nth($features-icons, $icon-index))};
+      }
+    }
+
     @include themify() {
       @for $i from 1 through list.length($features-icons) {
-        &:nth-of-type(#{$i}) {
-          .features-list__image {
-            background-image: #{url(list.nth($features-icons, $i))};
+        @if $i == 1 {
+          &_one {
+            @include feature-list-icon($i);
+          }
+        }
+        @else if $i == 2 {
+          &_two {
+            @include feature-list-icon($i);
+          }
+        }
+        @else {
+          &_three {
+            @include feature-list-icon($i);
           }
         }
       }
@@ -37,10 +53,10 @@
   }
 
   &__image {
-    @include box(50vw);
+    @include box(40vw);
 
-    max-width: 20rem;
-    max-height: 20rem;
+    max-width: 18rem;
+    max-height: 18rem;
     margin: 0 auto;
     margin-bottom: 1.5rem;
 
@@ -60,15 +76,26 @@
   }
 }
 
+.theme-main {
+  .features-list {
+    &__item {
+      &_two {
+        .features-list__image {
+          max-height: 14rem;
+          height: 30vw;
+          max-width: 20rem;
+          width: 45vw;
+        }
+      }
+    }
+  }
+}
+
 .theme-2,
 .theme-3 {
   .features-list {
-    &__list {
-      padding: 0 10rem;
-    }
-
     &__item {
-      max-width: 22%;
+      max-width: 22rem;
 
       text-align: center;
     }
@@ -102,6 +129,30 @@
       max-height: 16rem;
     }
   }
+
+  .theme-main {
+    .features-list {
+      &__item {
+        &_two {
+          .features-list__image {
+            max-height: 16rem;
+            height: 18vw;
+          }
+        }
+      }
+    }
+  }
+
+  .theme-2,
+  .theme-3 {
+    .features-list {
+      &__item {
+        max-width: 25rem;
+        margin-right: 4%;
+        margin-left: 4%;
+      }
+    }
+  }
 }
 
 @media (min-width: $s-desktop-min-width) {
@@ -113,7 +164,7 @@
     }
 
     .heading {
-      margin-bottom: 6rem;
+      margin-bottom: 5.5rem;
     }
 
     &__list {
@@ -122,9 +173,30 @@
     }
 
     &__item {
-      max-width: 32%;
+      max-width: 30.5%;
       margin-right: 0;
       margin-left: 0;
+    }
+
+    &__feature-title {
+      font-size: 1.6rem;
+    }
+
+    &__feature-description {
+      font-size: 1.5rem;
+    }
+  }
+
+  .theme-2,
+  .theme-3 {
+    .features-list {
+      &__list {
+        padding: 0 6rem;
+      }
+
+      &__item {
+        max-width: 26%;
+      }
     }
   }
 }
@@ -135,8 +207,12 @@
       padding: 0 3rem;
     }
 
-    &__item {
-      max-width: 30%;
+    &__feature-title {
+      font-size: 1.7rem;
+    }
+
+    &__feature-description {
+      font-size: 1.6rem;
     }
   }
 }
