--- a/src/assets/scss/blocks/reviews-block/review-card.scss
+++ b/src/assets/scss/blocks/reviews-block/review-card.scss
@@ -11,10 +11,28 @@
 
   &__text {
     overflow: hidden;
-    height: 24rem;
     margin-bottom: 2rem;
 
     text-align: left;
+
+    transition: max-height 0.3s;
+
+    &[data-cutted] {
+      max-height: 24rem;
+      height: 100rem;
+    }
+  }
+
+  &__expand-button {
+    @include reset-button();
+
+    border-bottom: 1px solid $transparent-color;
+
+    @include themify() {
+      @include in-focus() {
+        border-bottom-color: $color-secondary;
+      }
+    }
   }
 
   &__info {
@@ -24,6 +42,7 @@
   }
 
   &__source {
+    min-height: 1.6rem;
     margin-bottom: 0;
 
     font-size: 1.2rem;
@@ -33,7 +52,9 @@
 @media (min-width: $phone-landscape-min-width) {
   .review-card {
     &__text {
-      height: 16rem;
+      &[data-cutted] {
+        max-height: 16rem;
+      }
     }
   }
 }
@@ -41,10 +62,13 @@
 @media (min-width: $tablet-min-width) {
   .review-card {
     &__text {
-      height: 21rem;
       margin-bottom: 3rem;
 
       font-size: 1.6rem;
+
+      &[data-cutted] {
+        max-height: 21rem;
+      }
     }
 
     &__info {
@@ -56,8 +80,11 @@
 @media (min-width: $s-desktop-min-width) {
   .review-card {
     &__text {
-      height: 26.5rem;
       margin-bottom: 5rem;
+
+      &[data-cutted] {
+        max-height: 27rem;
+      }
     }
   }
 }
