--- a/src/pug/includes/modules/content/reviews-block.pug
+++ b/src/pug/includes/modules/content/reviews-block.pug
@@ -7,7 +7,7 @@ section.reviews-block
         +svg-icon('#star-icon').rating-block__star-icon(width='44' height='44' aria-label='звёзд')
         p.rating-block__text
           | наш рейтинг
-          img.rating-block__yandex-logo(src='../../../../assets/img/reviews-block/yandex-logo.svg' alt='Яндекс' width='40' height='15')
+          img.rating-block__yandex-logo(src='assets/img/reviews-block/yandex-logo.svg' alt='Яндекс' width='40' height='15')
       .reviews-block__slider
         button.slider__button.slider__button_prev.hidden_mobile(aria-label='Предыдущий отзыв')
         ul.reviews-block__reviews-list.slider
