--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -55,9 +55,7 @@ block variables
             id: 7,
             type: 'neck',
             source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась.
-              Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО!
-              Я вернусь, не пройдет и полгода...`,
+            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
             author: 'Анна',
             date: '13.02.2020'
           },
@@ -65,11 +63,7 @@ block variables
             id: 8,
             type: 'neck',
             source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа
-              регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный
-              сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов
-              были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие.
-              Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
+            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
             author: 'Оксана',
             date: '05.02.2020'
           },
@@ -77,13 +71,7 @@ block variables
             id: 9,
             type: 'neck',
             source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась
-              к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение
-              Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления
-              и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что
-              после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я
-              похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла
-              неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
+            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
             author: 'Татьяна',
             date: '20.01.2020'
           },
@@ -91,9 +79,7 @@ block variables
             id: 7,
             type: 'neck',
             source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась.
-              Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО!
-              Я вернусь, не пройдет и полгода...`,
+            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
             author: 'Анна',
             date: '13.02.2020'
           },
@@ -101,11 +87,7 @@ block variables
             id: 8,
             type: 'neck',
             source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа
-              регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный
-              сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов
-              были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие.
-              Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
+            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
             author: 'Оксана',
             date: '05.02.2020'
           },
@@ -113,13 +95,7 @@ block variables
             id: 9,
             type: 'neck',
             source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась
-              к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение
-              Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления
-              и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что
-              после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я
-              похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла
-              неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
+            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
             author: 'Татьяна',
             date: '20.01.2020'
           }
